syntax = "proto3";

option csharp_namespace = "Shared.GrpcDataStore";

// ----------- Server Communicatiom Service -----------

service ServerCommunicationService {
  rpc LockObject (lockRequest) returns (lockReply);
  rpc WriteNewValue (NewValueRequest) returns (NewValueReply);
  rpc IsAlive (IsAliveRequest) returns (IsAliveReply);
  rpc NotifyReplicaAboutCrash (NotifyReplicaAboutCrashRequest) returns (NotifyReplicaAboutCrashReply);
}

// lock request
message lockRequest{
	string partition_id = 1;
	string object_id = 2;
}

message lockReply{
	bool ok = 1;
}

// replica write request
message NewValueRequest{
	string val = 1;
	int32 clock = 2;
}

message NewValueReply{
	bool ok =1;
}

message IsAliveRequest{
	string isAlive = 1;
}

message IsAliveReply{
	bool ok = 1;
}

// NotifyCrash

message NotifyReplicaAboutCrashRequest {
	string crashed_master_server_id = 1;
	string partition_id = 2;
    bool is_master_crashed = 3;
}

message NotifyReplicaAboutCrashReply {
	string masterId = 1;
	bool ok = 2;
}

